@@ -18,8 +18,7 @@ my %WriteMakefileArgs = (
   "NAME" => "exact::lib",
   "PREREQ_PM" => {
     "FindBin" => 0,
-    "exact" => 0,
-    "strict" => 0
+    "exact" => "1.23"
   },
   "TEST_REQUIRES" => {
     "File::Spec" => 0,
@@ -27,9 +26,10 @@ my %WriteMakefileArgs = (
     "IPC::Open3" => 0,
     "Test2::V0" => 0,
     "Test::More" => 0,
+    "strict" => 0,
     "warnings" => 0
   },
-  "VERSION" => "1.03",
+  "VERSION" => "1.04",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -43,7 +43,7 @@ my %FallbackPrereqs = (
   "IPC::Open3" => 0,
   "Test2::V0" => 0,
   "Test::More" => 0,
-  "exact" => 0,
+  "exact" => "1.23",
   "strict" => 0,
   "warnings" => 0
 );
