@@ -48,3 +48,6 @@ issues = 1
 
 [@Git]
 untracked_files = ignore
+
+[Prereqs]
+exact = 1.23
